--- a/poster/poster.tex
+++ b/poster/poster.tex
@@ -1,1 +1,21 @@
+\documentclass{beamer}
 
+\usepackage{graphicx}
+
+\graphicspath{{../images/}}
+
+\title{Shortest Path Problem}
+\subtitle{Dr. Shah Jamal Alam}
+\author{Muhammad Hammad Maqdoom \\ Alisha Momin \\ Fatima Nasir Khan \\ Lama Imam}
+%\supervisor{Dr. Shah Jamal \textsc{Alam}}
+\date{CA 412 Spring 2022}
+
+\begin{document}
+\maketitle
+
+\begin{figure}
+          \centering
+          \includegraphics[width=12cm]{images/poster.png}
+    \end{figure}  
+
+\end{document}
